--- a/appveyor.yml
+++ b/appveyor.yml
@@ -84,7 +84,9 @@ test_script:
     - cd empty
     #- cd %HOMEDRIVE%%HOMEPATH%
     # The package does not seem to define __version__
-    #- "python -c \"import bientropy; print('HDBSCAN version ' + bientropy.__version__)\""
+    #- "python -c \"import bientropy; print('BiEntropy version ' + bientropy.__version__)\""
+    # The package does not seem to define __version__, so use pkg_resources
+    python -c "import pkg_resources; print('BiEntropy version: '+pkg_resources.get_distribution('bientropy').version)"
     # Now let's run our full test suite...
     - "python -m bientropy.test_suite"
     - cd ..
