--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,8 +3,8 @@ environment:
     REPO_DIR: bientropy
     PACKAGE_NAME: bientropy
     BUILD_COMMIT: master
-    BUILD_DEPENDS: "numpy scipy"
-    TEST_DEPENDS: "numpy scipy nose"
+    BUILD_DEPENDS: "numpy"
+    TEST_DEPENDS: "numpy"
     WHEELHOUSE_UPLOADER_USERNAME: travis-worker
     #WHEELHOUSE_UPLOADER_SECRET:
     #    secure:
@@ -64,6 +64,8 @@ install:
 build_script:
     # Install build requirements
     - conda install --yes %BUILD_DEPENDS%
+    # This should install 'gmp.h' and 'mpir.dll'
+    - conda install --yes -c conda-forge mpir
 
     # build wheel:
     - cd %REPO_DIR%
@@ -82,11 +84,10 @@ test_script:
     # run test from installed wheel.
     - mkdir empty
     - cd empty
-    #- cd %HOMEDRIVE%%HOMEPATH%
     # The package does not seem to define __version__
     #- "python -c \"import bientropy; print('BiEntropy version ' + bientropy.__version__)\""
     # The package does not seem to define __version__, so use pkg_resources
-    python -c "import pkg_resources; print('BiEntropy version: '+pkg_resources.get_distribution('bientropy').version)"
+    - python -c "import pkg_resources; print('BiEntropy version: '+pkg_resources.get_distribution('bientropy').version)"
     # Now let's run our full test suite...
     - "python -m bientropy.test_suite"
     - cd ..
