--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,6 +23,7 @@ environment:
     - PYTHON: "C:\\Miniconda34-x64"
       PYTHON_VERSION: "3.4"
       PYTHON_ARCH: "64"
+      DISTUTILS_USE_SDK: "1"
     - PYTHON: "C:\\Miniconda35"
       PYTHON_VERSION: "3.5"
       PYTHON_ARCH: "32"
