Reference new test suite location

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -90,7 +90,7 @@ test_script:
     # The package does not seem to define __version__, so use pkg_resources
     - "python -c \"import pkg_resources; print('BiEntropy version: '+pkg_resources.get_distribution('bientropy').version)\""
     # Now let's run our full test suite...
-    - "python -m bientropy.test_suite"
+    - "python -m bientropy.tests"
     - cd ..
     - deactivate
 
