--- a/.travis.yml
+++ b/.travis.yml
@@ -63,6 +63,15 @@ matrix:
       env:
         - MB_PYTHON_VERSION=3.6
         - PLAT=i686
+    - os: linux
+      dist: xenial
+      env:
+        - MB_PYTHON_VERSION=3.7
+    - os: linux
+      dist: xenial
+      env:
+        - MB_PYTHON_VERSION=3.7
+        - PLAT=i686
     - os: osx
       language: generic
       env:
@@ -79,6 +88,10 @@ matrix:
       language: generic
       env:
         - MB_PYTHON_VERSION=3.6
+    - os: osx
+      language: generic
+      env:
+        - MB_PYTHON_VERSION=3.7
 
 before_install:
     - source multibuild/common_utils.sh
