Trying to figure out why both Travis and AppVeyor are checking out 2df59da726468626a91f5e2f6bccb8b5be23a9d8 but building or using wheel files with bientropy version 1.1.1

--- a/.travis.yml
+++ b/.travis.yml
@@ -97,6 +97,8 @@ before_install:
     - source multibuild/common_utils.sh
     - source multibuild/travis_steps.sh
     - before_install
+    - ls wheelhouse
+    - grep version setup.py
 
 install:
     # Maybe get and clean and patch source
