--- a/.travis.yml
+++ b/.travis.yml
@@ -97,8 +97,8 @@ before_install:
     - source multibuild/common_utils.sh
     - source multibuild/travis_steps.sh
     - before_install
-    - ls wheelhouse
-    - grep version setup.py
+    - ls ${TRAVIS_BUILD_DIR}/wheelhouse
+    - grep version bientropy/setup.py
 
 install:
     # Maybe get and clean and patch source
